tests/behavior/success/empty_main3.bz
function main(_args: [: str]) -> int32
{
	return 0;
}
