tests/behavior/error/optional_get_value4.bz
function get_optional() -> ?&int32
{
	return null;
}

function main()
{
	__builtin_optional_get_value(get_optional());
}
